# ffmpeg-interop

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
